--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,14 @@
   box-sizing: border-box;
 }
 
+ul li {
+  list-style: none;
+}
+
+body {
+  font-size: calc(18px + 0.25vw);
+}
+
 .fade-enter {
   opacity: 0;
   transform: translateX(100%);
